[package]
name = "game_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
actix-web = "4.3"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
parking_lot = "0.12"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"
futures = "0.3"
thiserror = "1.0"
anyhow = "1.0"
rand = "0.8" 